# armemu

./: .gitignore  Cargo.toml  README.md  config.toml
asmfiles/: assembly01.asm  assembly02.asm  assembly03.asm  assembly04.asm  assembly05.asm  assembly06.asm
src/: dbgview.rs  errormsg.rs  executer.rs  instruction_parser.rs  instructions.rs  main.rs  parse_toml.rs  registers.rs  syscalls.rs  tests.rs
