[package]
name = "armemu"
version = "1.1.1"
edition = "2024"
description = "An experimental Arm64 emulator."
license = "BSD"
repository = "https://github.com/parssarica/armemu"
readme = "README.md"

[dependencies]
capstone = "0.14.0"
object = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
termion = "4.0.6"
toml = "1.0.6"
